--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "sass": "^1.47.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.6.0",
