--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.47.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
   },
